--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <img src="images/cover-pic.png" alt="" width="100%">
                 <div class="sidebar-profile-info">
                     <img src="images/user-1.png" alt="">
-                    <h1>Suraj Adhikari</h1>
+                    <h1>Rahul Kumar Singh</h1>
                     <h3>Software Engineer at Amazon</h3>
                     <ul>
                         <li>Your profile views <span>100</span></li>
